--- a/app/package.json
+++ b/app/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.3"
   },
   "name": "login-lecture",
-  "version": "1.0.0", 
+  "version": "1.0.0",
   "main": "app.js",
   "bin": {
     "login-lecture": "bin/www.js"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
